# sjconf

./: .gitignore  ChangeLog  MANIFEST.in  Makefile  Makefile.am  README.rst  configure.ac  setup.py  setup.py.in  sjconf  sjconf.in  sjconf.py
autotools/: Makefile.am  sjconf.am  sjconf.m4.in
conf/: Makefile.am  base.conf  local.conf  sjconf  sjconf.conf
conf/base/: Makefile.am
conf/bash_completion/: Makefile.am
conf/custom/: Makefile.am  README
conf/distrib/: Makefile.am  README
conf/profiles/: Makefile.am
conf/templates/: Makefile.am
debian/: .cvsignore  changelog  control  copyright  dirs  files  rules  sjconf1-dev.install  sjconf1.dirs  sjconf1.install  sjconf1.lintian-overrides  sjconf1.postrm  sjconf1.preinst  sjconf1.prerm
doc/: Makefile.am  sjconf.bash_completion  sjconf.t2t
etc/: base.ini  local.ini
etc/custom/: README
etc/default/: sjconf
etc/smartjog/: base.conf  local.conf  sjconf
etc/smartjog/custom/: README
etc/smartjog/templates/hosts/: hosts.conf
etc/smartjog/templates/intervpn/: inter-client.conf  inter-server-iptables.conf  inter-server.conf  inter.conf
etc/smartjog/templates/openvpn/: autostart  client.conf  inter-server-iptables.conf  inter-server.conf  inter.conf
etc/smartjog/templates/shaping/: shaping.conf
etc/templates/openvpn/: client.conf  inter.conf
etc/templates/proftpd/: proftpd.conf
lib/: hosts.py  intervpn.py  iptables.py  openvpn.py  shaping.py
old_version_templates_and_plugins/plugins/: intervpn.py  iptables.py
old_version_templates_and_plugins/templates/iptables/: default
old_version_templates_and_plugins/templates/toolbox/: www.conf
share/: __init__.py  hosts.py  iptables.py  openvpn.py  postgresql.py  shaping.py  test.py
sjconfparts/: Makefile.am  conf.py  exceptions.py  plugin.py  type.py
smartjog/: local.conf
smartjog/templates/iptables/: default
tests/: Makefile.am  test_plugins.py  test_type_list.py
